# zephyr-esp32-example

./: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml  west.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml
boards/: esp32c3_devkitm.conf  esp32c3_devkitm.overlay  esp32s3_devkitc_esp32s3_procpu.conf  esp32s3_devkitc_esp32s3_procpu.overlay  esp32s3_devkitm_esp32s3_procpu.conf
config/: memfault_platform_config.h
src/: main.c  memfault_device_info.c
sysbuild/: mcuboot.conf
